:bug: fix: address service stoppage issue with multiple protocols
- fixed issue with stopping all services when using multiple protocols.
- improved error handling.
- added port and protocol validation.

--- a/PlayerServer/Assets/Languages/en_US.axaml
+++ b/PlayerServer/Assets/Languages/en_US.axaml
@@ -24,4 +24,6 @@
     <system:String x:Key="DisableString">Disable</system:String>
     <system:String x:Key="ThemeString">Theme</system:String>
     <system:String x:Key="ThemeDescriptionString">Configure theme colors</system:String>
+    <system:String x:Key="InvalidPortString">Invalid port number</system:String>
+    <system:String x:Key="NoProtocolSelectedString">No protocol selected</system:String>
 </ResourceDictionary>
