--- a/PlayerServer/Views/SettingView.axaml
+++ b/PlayerServer/Views/SettingView.axaml
@@ -3,7 +3,6 @@
              xmlns:vm="using:PlayerServer.ViewModels"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:ctrls="clr-namespace:FluentAvalonia.UI.Controls;assembly=FluentAvalonia"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="PlayerServer.Views.SettingView"
              x:DataType="vm:SettingViewModel">
@@ -13,22 +12,33 @@
         <vm:SettingViewModel />
     </Design.DataContext>
 
-    <Grid RowDefinitions="Auto,*">
-        <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
-            <StackPanel Margin="20">
-                <ctrls:SettingsExpander
-                    Header="{DynamicResource ThemeString}"
-                    Description="{DynamicResource ThemeDescriptionString}"
-                    IconSource="DarkTheme">
-                    <ctrls:SettingsExpander.Footer>
-                        <ComboBox Width="150" SelectedIndex="{Binding ThemeSelected}">
-                            <ComboBoxItem Content="默认" />
-                            <ComboBoxItem Content="浅色" />
-                            <ComboBoxItem Content="深色" />
-                        </ComboBox>
-                    </ctrls:SettingsExpander.Footer>
-                </ctrls:SettingsExpander>
-            </StackPanel>
-        </ScrollViewer>
-    </Grid>
+    <StackPanel Margin="10">
+        <CheckBox Content="Auto Start Server" IsChecked="" />
+        <TextBox Watermark="Default Protocol" Text="" />
+        <TextBox Watermark="Default Port" Text="" />
+        <ComboBox Items="" SelectedItem="" />
+        <TextBox Watermark="Default Language" Text="" />
+        <ComboBox Items="" SelectedItem="" />
+        <TextBox Watermark="Default Theme" Text="" />
+        <ComboBox Items="" SelectedItem="" />
+        <Button Content="Save" />
+    </StackPanel>
+    <!-- <Grid RowDefinitions="Auto,*"> -->
+    <!--     <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto"> -->
+    <!--         <StackPanel Margin="20"> -->
+    <!--             <ctrls:SettingsExpander -->
+    <!--                 Header="{DynamicResource ThemeString}" -->
+    <!--                 Description="{DynamicResource ThemeDescriptionString}" -->
+    <!--                 IconSource="DarkTheme"> -->
+    <!--                 <ctrls:SettingsExpander.Footer> -->
+    <!--                     <ComboBox Width="150" SelectedIndex="{Binding ThemeSelected}"> -->
+    <!--                         <ComboBoxItem Content="默认" /> -->
+    <!--                         <ComboBoxItem Content="浅色" /> -->
+    <!--                         <ComboBoxItem Content="深色" /> -->
+    <!--                     </ComboBox> -->
+    <!--                 </ctrls:SettingsExpander.Footer> -->
+    <!--             </ctrls:SettingsExpander> -->
+    <!--         </StackPanel> -->
+    <!--     </ScrollViewer> -->
+    <!-- </Grid> -->
 </UserControl>
